[project]
name = "llm-lora-classification"
version = "0.1.0"
authors = ["hppRC <hpp.ricecake@gmail.com>"]
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.9.0",
    "more-itertools>=10.7.0",
    "pandas>=2.3.1",
    "peft>=0.16.0",
    "scikit-learn>=1.7.1",
    "sentencepiece>=0.2.0",
    "transformers>=4.54.0",
    "typed-argument-parser>=1.10.1",
]
