[project]
name = "llm-lora-classification"
version = "0.1.0"
authors = ["hppRC <hpp.ricecake@gmail.com>"]
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.9.0",
    "mlflow>=3.1.4",
    "more-itertools>=10.7.0",
    "pandas>=2.3.1",
    "peft>=0.16.0",
    "scikit-learn>=1.7.1",
    "sentencepiece>=0.2.0",
    "transformers>=4.54.0",
    "typed-argument-parser>=1.10.1",
    "unsloth>=2025.7.8",
]


# 開発用の依存関係を追加
[project.optional-dependencies]
dev = [
    "ruff",
]

# ruff の設定を追加
[tool.ruff]
# black と同じ行長に設定
line-length = 88
# 最低限の Python バージョンを指定
target-version = "py312"

[tool.ruff.lint]
# 有効にするルールセット
# E: pycodestyle errors
# W: pycodestyle warnings
# F: Pyflakes
# I: isort
# UP: pyupgrade
# C90: McCabe complexity
select = ["E", "W", "F", "I", "UP", "C90"]
ignore = []

[tool.ruff.format]
# ダブルクォートを強制
quote-style = "double"
# インデントスタイル
indent-style = "space"
# マジックトレーリングコンマをスキップしない (有効にする)
skip-magic-trailing-comma = false
# 改行コード
line-ending = "lf"
