[project]
name = "llm-lora-classification"
version = "0.1.0"
authors = ["hppRC <hpp.ricecake@gmail.com>"]
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.9.0",
    "mlflow>=3.1.4",
    "more-itertools>=10.7.0",
    "pandas>=2.3.1",
    "peft>=0.16.0",
    "scikit-learn>=1.7.1",
    "sentencepiece>=0.2.0",
    "transformers>=4.54.0",
    "typed-argument-parser>=1.10.1",
    "unsloth>=2025.7.8",
    "huggingface-hub[cli]>=0.34.1",
    "pynvml>=12.0.0",
]

[dependency-groups]
dev = [
    "ruff",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "C90"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
